# Personal-Evidence-Graph

./: .env.example  .gitignore  README.md
ai/: __init__.py  chunking.py  embeddings.py  llm.py  reranker.py
ai/prompts/: answer_with_citations.txt  enrich_metadata.txt  extract_claims.txt  extract_obligations.txt  judge_contradiction.txt  refusal.txt
backend/: pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/models/: __init__.py  db.py  schemas.py
backend/app/routers/: claims.py  evidence.py  files.py  health.py  ingest.py  query.py  reindex.py  timeline.py
backend/app/security/: __init__.py  paths.py  sanitize.py
backend/app/services/: __init__.py  answer.py  claim_extraction.py  claims.py  contradiction_detection.py  enrichment.py  ingestion.py  obligation_extraction.py  retrieval.py  timeline.py
db/: schema.sql
docker/: docker-compose.dev.yml
docs/: api.md  architecture.md  citation-contract.md  ingestion-pipeline.md  security.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: answer-panel.tsx  citation-list.tsx  command-palette.tsx  copy-button.tsx  demo-banner.tsx  evidence-card.tsx  evidence-preview.tsx  highlighted-text.tsx  (+7 more)
ingestion/: __init__.py  hashing.py  metadata.py  watcher.py
installers/: README.md
scripts/: detect_contradictions.py  dev.sh  extract_claims.py  extract_obligations.py  install_linux.sh  install_mac.sh  install_windows.ps1  pull_models.sh  reset_db.sh  seed_demo.py
tests/: conftest.py
(+37 files in other folders)
