[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-graph-backend"
version = "0.1.0"
description = "Personal Evidence Graph backend — local-first proof-aware memory system."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "python-multipart>=0.0.9",
  "python-magic>=0.4.27",
  "slowapi>=0.1.9",
  "httpx>=0.27",
  "watchdog>=4.0",
  "sentence-transformers>=3.0",
  "chromadb>=0.5",
  "pypdfium2>=4.30",
  "pytesseract>=0.3.10",
  "Pillow>=10.3",
  "exifread>=3.0",
  "ollama>=0.3",
  "tiktoken>=0.7",
  "tenacity>=8.3",
  "structlog>=24.1",
  "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
addopts = "-ra --strict-markers"
